# Automated-Classroom-Alert-System-with-Smart-Reminders-and-Display-Capabilities

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/ssd1306/: ssd1306_i2c_legacy.c  ssd1306_i2c_new.c
main/: CMakeLists.txt  TimeTableCode.c  file_server.c  file_serving.h  i2cdev.h  idf_component.yml  upload_script.html  wifi.c
partition/: timetable.csv
